--- a/src/frontend/webpack/index.scss
+++ b/src/frontend/webpack/index.scss
@@ -17,7 +17,12 @@
 // Buttons
 @use "@material/button";
 @use "@material/button/mdc-button";
+
+@use "@material/textfield";
+@use "@material/textfield/mdc-text-field";
+
 @include button.core-styles;
+@include textfield.core-styles;
 
 .tabcontent {
   display: none;
@@ -34,7 +39,7 @@
   cursor: pointer;
 }
 
-.mdc-button {
+.formButton {
   margin-bottom: 8px;
   float: right;
 }
@@ -49,4 +54,79 @@
 
 .mdc-list-item .material-icons {
   margin-right: 1rem;
+}
+
+/* The side navigation menu */
+.form {
+  height: 100%;
+  /* 100% Full-height */
+  width: 0;
+  /* 0 width - change this with JavaScript */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Stay on top */
+  top: 0;
+  /* Stay at the top */
+  // left: 0;
+  right: 0;
+  background-color: #F5F5F5;
+
+
+  /* Black*/
+  overflow-x: hidden;
+  /* Disable horizontal scroll */
+  padding-top: 60px;
+  /* Place content 60px from the top */
+  transition: 0.5s;
+}
+
+
+.form label {
+  display: block;
+  margin: 16px 32px;
+}
+
+.form button {
+  float: right;
+  margin: 0px 32px;
+}
+
+
+.form .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  color: #818181;
+  transition: 0.5s;
+}
+
+.form .closebtn:hover {
+  color: #d4bff9;
+}
+
+.form .closebtn:active {
+  color: #6002ee;
+}
+
+#main {
+  transition: margin-right .5s;
+  min-height: 100vh;
+}
+
+body {
+  margin: 0;
+}
+
+@media screen and (max-height: 450px) {
+  .form {
+    padding-top: 15px;
+  }
+
+  .form a {
+    font-size: 18px;
+  }
 }
