--- a/src/frontend/views/index.html
+++ b/src/frontend/views/index.html
@@ -1,57 +1,106 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>web-watcher</title>
-    <!-- https://material.io/resources/icons/?icon=more_vert&style=baseline -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <link rel="stylesheet" href="bundle.css" />
-  </head>
 
-  <body>
+<head>
+  <!-- https://material.io/resources/icons/?icon=more_vert&style=baseline -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="bundle.css" />
+
+</head>
+
+<body>
+  <div id="UserForm" class="form">
+    <a id="UserFormCloseButton" class="closebtn" href="javascript:void(0)">&times;</a>
+    <label class="mdc-text-field mdc-text-field--outlined">
+      <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id">
+      <span class="mdc-notched-outline">
+        <span class="mdc-notched-outline__leading"></span>
+        <span class="mdc-notched-outline__notch">
+          <span class="mdc-floating-label" id="my-label-id">Your Name</span>
+        </span>
+        <span class="mdc-notched-outline__trailing"></span>
+      </span>
+    </label>
+    <label class="mdc-text-field mdc-text-field--outlined">
+      <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id2">
+      <span class="mdc-notched-outline">
+        <span class="mdc-notched-outline__leading"></span>
+        <span class="mdc-notched-outline__notch">
+          <span class="mdc-floating-label" id="my-label-id2">Your Email</span>
+        </span>
+        <span class="mdc-notched-outline__trailing"></span>
+      </span>
+    </label>
+
+    <button class="mdc-button">
+      <div class="mdc-button__ripple"></div>
+      <span class="mdc-button__label">Create</span>
+    </button>
+  </div>
+
+  <div id="WatcherForm" class="form">
+    <a id="WatcherFormCloseButton" class="closebtn" href="javascript:void(0)">&times;</a>
+    <label class="mdc-text-field mdc-text-field--outlined">
+      <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id3">
+      <span class="mdc-notched-outline">
+        <span class="mdc-notched-outline__leading"></span>
+        <span class="mdc-notched-outline__notch">
+          <span class="mdc-floating-label" id="my-label-id3">Your User ID</span>
+        </span>
+        <span class="mdc-notched-outline__trailing"></span>
+      </span>
+    </label>
+    <label class="mdc-text-field mdc-text-field--outlined">
+      <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id4">
+      <span class="mdc-notched-outline">
+        <span class="mdc-notched-outline__leading"></span>
+        <span class="mdc-notched-outline__notch">
+          <span class="mdc-floating-label" id="my-label-id4">Watcher URL</span>
+        </span>
+        <span class="mdc-notched-outline__trailing"></span>
+      </span>
+    </label>
+
+    <label class="mdc-text-field mdc-text-field--outlined">
+      <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id4">
+      <span class="mdc-notched-outline">
+        <span class="mdc-notched-outline__leading"></span>
+        <span class="mdc-notched-outline__notch">
+          <span class="mdc-floating-label" id="my-label-id4">Watcher Frequency (sec)</span>
+        </span>
+        <span class="mdc-notched-outline__trailing"></span>
+      </span>
+    </label>
+
+    <button class="mdc-button">
+      <div class="mdc-button__ripple"></div>
+      <span class="mdc-button__label">Create</span>
+    </button>
+  </div>
+
+  <div id="main">
+
     <div class="mdc-tab-bar" role="tablist">
       <div class="mdc-tab-scroller">
         <div class="mdc-tab-scroller__scroll-area">
           <div class="mdc-tab-scroller__scroll-content">
-            <button
-              id="UsersTab"
-              class="mdc-tab mdc-tab--active"
-              role="tab"
-              aria-selected="true"
-              tabindex="0"
-            >
+            <button id="UsersTab" class="mdc-tab mdc-tab--active" role="tab" aria-selected="true" tabindex="0">
               <span class="mdc-tab__content">
-                <span class="mdc-tab__icon material-icons" aria-hidden="true"
-                  >group</span
-                >
+                <span class="mdc-tab__icon material-icons" aria-hidden="true">group</span>
                 <span class="mdc-tab__text-label">Users</span>
               </span>
               <span class="mdc-tab-indicator mdc-tab-indicator--active">
-                <span
-                  class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
-                ></span>
+                <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
               </span>
               <span class="mdc-tab__ripple"></span>
             </button>
-            <button
-              id="WatchersTab"
-              class="mdc-tab"
-              role="tab"
-              aria-selected="false"
-              tabindex="0"
-            >
+            <button id="WatchersTab" class="mdc-tab" role="tab" aria-selected="false" tabindex="0">
               <span class="mdc-tab__content">
-                <span class="mdc-tab__icon material-icons" aria-hidden="true"
-                  >visibility</span
-                >
+                <span class="mdc-tab__icon material-icons" aria-hidden="true">visibility</span>
                 <span class="mdc-tab__text-label">Watchers</span>
               </span>
               <span class="mdc-tab-indicator">
-                <span
-                  class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
-                ></span>
+                <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
               </span>
               <span class="mdc-tab__ripple"></span>
             </button>
@@ -61,9 +110,9 @@
     </div>
 
     <div id="UsersTabContent" class="tabcontent">
-      <button class="mdc-button mdc-button--outlined">
+      <button id="UserFormButton" class="formButton mdc-button mdc-button--outlined">
         <div class="mdc-button__ripple"></div>
-        <i class="material-icons mdc-button__icon" aria-hidden="true">add</i>
+        <i class="material-icons mdc-button__icon chevronIcon" aria-hidden="true">chevron_left</i>
         <span class="mdc-button__label">Add user</span>
       </button>
 
@@ -71,47 +120,36 @@
         <table class="mdc-data-table__table" aria-label="Users">
           <thead>
             <tr class="mdc-data-table__header-row">
-              <th
-                class="mdc-data-table__header-cell"
-                role="columnheader"
-                scope="col"
-              >
+              <th class="mdc-data-table__header-cell" role="columnheader" scope="col">
                 User
               </th>
-              <th
-                class="mdc-data-table__header-cell"
-                role="columnheader"
-                scope="col"
-              >
+
+              <th class="mdc-data-table__header-cell" role="columnheader" scope="col">
+                User ID
+              </th>
+
+              <th class="mdc-data-table__header-cell" role="columnheader" scope="col">
                 Email
               </th>
-              <th
-                class="mdc-data-table__header-cell mdc-data-table__header-cell--numeric"
-                role="columnheader"
-                scope="col"
-              >
+              <th class="mdc-data-table__header-cell mdc-data-table__header-cell--numeric" role="columnheader"
+                scope="col">
                 Watchers
               </th>
-              <th
-                class="mdc-data-table__header-cell"
-                role="columnheader"
-                scope="col"
-              ></th>
+              <th class="mdc-data-table__header-cell" role="columnheader" scope="col"></th>
             </tr>
           </thead>
           <tbody class="mdc-data-table__content">
-
             {% for user_id, data in users %}
             <tr class="mdc-data-table__row">
               <td class="mdc-data-table__cell">{{data.name}}</td>
+              <td class="mdc-data-table__cell">{{user_id}}</td>
               <td class="mdc-data-table__cell">{{data.email}}</td>
               <td class="mdc-data-table__cell mdc-data-table__cell--numeric">
                 {{data.watchers | length}}
               </td>
               <td class="mdc-data-table__cell">
                 <span id="{{user_id}}Anchor" class="anchor material-icons">
-                  more_vert</span
-                >
+                  more_vert</span>
               </td>
             </tr>
             {% endfor %}
@@ -121,13 +159,7 @@
 
       {% for user_id, data in users %}
       <div id="{{user_id}}" class="mdc-menu mdc-menu-surface">
-        <ul
-          class="mdc-list"
-          role="menu"
-          aria-hidden="true"
-          aria-orientation="vertical"
-          tabindex="-1"
-        >
+        <ul class="mdc-list" role="menu" aria-hidden="true" aria-orientation="vertical" tabindex="-1">
           <li class="mdc-list-item" role="menuitem">
             <span class="material-icons">edit</span>
             <span class="mdc-list-item__text">Edit</span>
@@ -143,9 +175,9 @@
     </div>
 
     <div id="WatchersTabContent" class="tabcontent">
-      <button class="mdc-button mdc-button--outlined">
+      <button id="WatcherFormButton" class="formButton mdc-button mdc-button--outlined">
         <div class="mdc-button__ripple"></div>
-        <i class="material-icons mdc-button__icon" aria-hidden="true">add</i>
+        <i class="material-icons mdc-button__icon chevronIcon" aria-hidden="true">chevron_left</i>
         <span class="mdc-button__label">Add watcher</span>
       </button>
 
@@ -153,47 +185,29 @@
         <table class="mdc-data-table__table" aria-label="Users">
           <thead>
             <tr class="mdc-data-table__header-row">
-              <th
-                class="mdc-data-table__header-cell"
-                role="columnheader"
-                scope="col"
-              >
+              <th class="mdc-data-table__header-cell" role="columnheader" scope="col">
                 User
               </th>
-              <th
-                class="mdc-data-table__header-cell"
-                role="columnheader"
-                scope="col"
-              >
+
+              <th class="mdc-data-table__header-cell" role="columnheader" scope="col">
                 URL
               </th>
-              <th
-                class="mdc-data-table__header-cell mdc-data-table__header-cell--numeric"
-                role="columnheader"
-                scope="col"
-              >
+              <th class="mdc-data-table__header-cell mdc-data-table__header-cell--numeric" role="columnheader"
+                scope="col">
                 Frequency
               </th>
-              <th
-                class="mdc-data-table__header-cell mdc-data-table__header-cell--numeric"
-                role="columnheader"
-                scope="col"
-              >
+              <th class="mdc-data-table__header-cell mdc-data-table__header-cell--numeric" role="columnheader"
+                scope="col">
                 Last Run
               </th>
-              <th
-                class="mdc-data-table__header-cell"
-                role="columnheader"
-                scope="col"
-              ></th>
+              <th class="mdc-data-table__header-cell" role="columnheader" scope="col"></th>
             </tr>
           </thead>
-
           <tbody class="mdc-data-table__content">
             {% for watcher_id, data in watchers %}
             <tr class="mdc-data-table__row">
               <td class="mdc-data-table__cell">{{users[data.user_id].name}}</td>
-              <td class="mdc-data-table__cell">{{data.url}}</td>
+              <td class="mdc-data-table__cell"><a href="{{data.url}}">{{data.url}}</a></td>
               <td class="mdc-data-table__cell mdc-data-table__cell--numeric">
                 {{data.frequency}}
               </td>
@@ -202,25 +216,17 @@
               </td>
               <td class="mdc-data-table__cell">
                 <span id="{{watcher_id}}Anchor" class="anchor material-icons">
-                  more_vert</span
-                >
+                  more_vert</span>
               </td>
             </tr>
             {% endfor %}
           </tbody>
-
         </table>
       </div>
 
       {% for watcher_id, data in watchers %}
       <div id="{{watcher_id}}" class="mdc-menu mdc-menu-surface">
-        <ul
-          class="mdc-list"
-          role="menu"
-          aria-hidden="true"
-          aria-orientation="vertical"
-          tabindex="-1"
-        >
+        <ul class="mdc-list" role="menu" aria-hidden="true" aria-orientation="vertical" tabindex="-1">
           <li class="mdc-list-item" role="menuitem">
             <span class="material-icons">edit</span>
             <span class="mdc-list-item__text">Edit</span>
@@ -235,6 +241,9 @@
 
     </div>
 
-    <script src="bundle.js" async></script>
-  </body>
+  </div>
+
+  <script src="bundle.js" async></script>
+</body>
+
 </html>
