--- a/src/frontend/views/index.html
+++ b/src/frontend/views/index.html
@@ -383,6 +383,6 @@
     </div>
 
     <script src="bundle.js" async></script>
-    <div id="configureAddress">{{configure_adddress}}</div>
+    <div id="configureAddress">{{configure_address}}</div>
   </body>
 </html>
