--- a/src/frontend/src/components/page.css
+++ b/src/frontend/src/components/page.css
@@ -18,6 +18,6 @@ body {
 @media only screen and (max-width: 1056px) {
   td:nth-child(1){
     max-width: 26vw;
-    overflow-y: scroll;
+    overflow: auto;
   }
 }
